Started adding Scalatra code

--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,23 @@ allprojects {
   group = 'org.deeg.utc'
   version = '1.0'
 }
-    
+
+subprojects {
+  apply plugin: 'scala'
+
+  repositories {
+     mavenLocal()
+     maven {
+       url "https://oss.sonatype.org/content/repositories/snapshots"
+     }
+     mavenCentral()
+  }
+
+  dependencies {
+    compile 'org.scala-lang:scala-library:2.11.8'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.scalatest:scalatest_2.11:3.0.0'
+    testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.5'
+  }
+}
