--- a/zeidon/build.gradle
+++ b/zeidon/build.gradle
@@ -4,30 +4,8 @@ Domain logic for UTC and the Zeidon objects.
 Project name: ${project.name}
 """
 
-// group = 
-// version = '1.0'
-
-// Apply the scala plugin to add support for Scala
-apply plugin: 'scala'
-
-// In this section you declare where to find the dependencies of your project
-repositories {
-    mavenLocal()
-    maven {
-      url "https://oss.sonatype.org/content/repositories/snapshots"
-    }
-    mavenCentral()
-    //jcenter()
-}
-
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // We use Scala 2.11 in our library project
-    compile 'org.scala-lang:scala-library:2.11.8'
     compile 'com.quinsoft.zeidon:zeidon-joe:1.4.0-SNAPSHOT'
-
-    // We use Scalatest for testing our library
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.scalatest:scalatest_2.11:3.0.0'
-    testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.5'
+    compile 'com.quinsoft.zeidon:zeidon-scala:1.4.0-SNAPSHOT'
 }
