Added UDP server code

--- a/server/conf/zeidon.ini
+++ b/server/conf/zeidon.ini
@@ -1,6 +1,7 @@
 [UTC]
 ;;oiSourceUrl=jdbc:mysql://localhost/northwind
 oiSourceUrl=jdbc:sqlite::resource:northwind.sqlite
+StartUdpServer=N
 
 [UTC.MySql.jdbc.mysql]
 Username=dgc
