Got sample activate working with DB

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -12,6 +12,9 @@ gretty {
 
     debugPort = 8000
     debugSuspend = false
+    
+    // Set environment variable used in zeidon.ini to specify where sqlite DB is located.
+    jvmArgs = [ "-DSQLITE_ROOT=${project.projectDir}/../sqlite" ]
 }
 
 dependencies {
@@ -21,6 +24,7 @@ dependencies {
     compile 'org.scalatra:scalatra-json_2.11:2.3.1'
     compile 'org.eclipse.jetty.orbit:javax.servlet:3.0.0.v201112011016'
     compile 'org.json4s:json4s-jackson_2.11:3.3.0'
+    compile 'org.xerial:sqlite-jdbc:3.8.11.2'
     
     //jetty "org.eclipse.jetty:jetty-runner:9.3.11.v20160721"
 }
