--- a/server/conf/zeidon.ini
+++ b/server/conf/zeidon.ini
@@ -1,6 +1,11 @@
+;; Group and key names are not case-sensitive
+;;
+;; To use environment variables, use ${env.VAR_NAME}.  For example:
+;; TestDir=${env.ZEIDON_HOME}/abc
+
 [UTC]
 ;;oiSourceUrl=jdbc:mysql://localhost/northwind
-oiSourceUrl=jdbc:sqlite::resource:northwind.sqlite
+oiSourceUrl=jdbc:sqlite:${env.SQLITE_ROOT}/utc.sqlite.db
 StartUdpServer=N
 
 [UTC.MySql.jdbc.mysql]
