--- a/server/conf/zeidon.ini
+++ b/server/conf/zeidon.ini
@@ -6,7 +6,7 @@
 [UTC]
 ;;oiSourceUrl=jdbc:mysql://localhost/northwind
 oiSourceUrl=jdbc:sqlite:${env.SQLITE_ROOT}/utc.sqlite.db
-StartUdpServer=N
+StartUdpServer=Y
 
 [UTC.MySql.jdbc.mysql]
 Username=dgc
