Exclude .jars to make .war leaner

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,6 +8,9 @@ apply plugin: 'war'
 
 dependencies {
     compile project(':utc-zeidon')
-    compile 'org.scalatra:scalatra_2.11:2.3.1'
+    compile( 'org.scalatra:scalatra_2.11:2.3.1' ) {
+        exclude module: 'scala-xml_2.11'
+    }
+		
     compile 'org.eclipse.jetty.orbit:javax.servlet:3.0.0.v201112011016'
 }
