Create default configuration

--- a/conf/zeidon.ini
+++ b/conf/zeidon.ini
@@ -6,7 +6,7 @@
 [UTC]
 ;;oiSourceUrl=jdbc:mysql://localhost/northwind
 oiSourceUrl=jdbc:sqlite:${env.SQLITE_ROOT}/utc.sqlite.db
-StartUdpServer=Y
+StartUdpServer=N
 
 [UTC.MySql.jdbc.mysql]
 Username=dgc
