--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,8 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-      version="3.0">
+      version="3.0"
+      metadata-complete="true" >
     <listener>
       <listener-class>org.scalatra.servlet.ScalatraListener</listener-class>
     </listener>
@@ -14,4 +15,7 @@
       <url-pattern>/js/*</url-pattern>
       <url-pattern>/assets/*</url-pattern>
     </servlet-mapping>
+
+    <absolute-ordering/>
+    
 </web-app>
