Copy index.jetty.html to index.html on build

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,4 +18,6 @@ dependencies {
 
 war {
     from( "../angular/src" )
+    exclude( "**/index.html" )
+    rename( "index.jetty.html", "index.html" )
 }
