--- a/zeidon/build.gradle
+++ b/zeidon/build.gradle
@@ -11,7 +11,7 @@ configurations {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile( 'com.quinsoft.zeidon:zeidon-scala:1.5.0-SNAPSHOT') {
+    compile( "com.quinsoft.zeidon:zeidon-scala:${versions.zeidon}" ) {
         // Exclude some projects to keep the final .war size down.
         exclude module: 'scala-reflect'
         exclude module: 'httpclient'
@@ -26,10 +26,10 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
 
     repl 'org.scala-lang:scala-compiler:2.11.8'
-    repl 'com.quinsoft.zeidon:object-browser:1.4.1-SNAPSHOT'
+    repl "com.quinsoft.zeidon:object-browser:${versions.zeidon}"
     repl 'jline:jline:2.13'
 
-    generateTypescriptFiles 'com.quinsoft.zeidon:javascript:1.4.1-SNAPSHOT'
+    generateTypescriptFiles "com.quinsoft.zeidon:javascript:${versions.zeidon}"
     generateTypescriptFiles  group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
 }
 
