--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'war'
 
 dependencies {
     compile project(':utc-controller')
-    compile( 'com.quinsoft.zeidon:zeidon-scalatra-rest:1.5.0-SNAPSHOT' ) {
+    compile( "com.quinsoft.zeidon:zeidon-scalatra-rest:${versions.zeidon}" ) {
         exclude module: 'scala-xml_2.11' // To save space.
     }
 
