Update dev install to be more user generic

--- a/install-notes/ssmtp.conf
+++ b/install-notes/ssmtp.conf
@@ -1,4 +1,4 @@
-# Config file for sSMTP sendmail
+# Config file for sSMTP sendmail for use with GMail.
 #
 # The person who gets all mail for userids < 1000
 # Make this empty to disable rewriting.
