--- a/server/build.gradle
+++ b/server/build.gradle
@@ -9,11 +9,13 @@ apply plugin: 'war'
 dependencies {
     compile project(':utc-controller')
     compile( "com.quinsoft.zeidon:zeidon-scalatra-rest:${versions.zeidon}" ) {
-        exclude module: 'scala-xml_2.11' // To save space.
+        exclude module: 'scala-xml_2.12' // To save space.
     }
 
     compile "com.github.wookietreiber:scala-chart_${versions.scala}:0.5.1"
-//    compile 'org.eclipse.jetty.orbit:javax.servlet:3.0.0.v201112011016'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.scalatest:scalatest_2.12:3.0.4'
+    testRuntime 'org.scala-lang.modules:scala-xml_2.12:1.0.5'
 }
 
 war {
@@ -37,4 +39,5 @@ war {
     }
     
     from( "../angular/src" )
+    from( "../angular/dist" )
 }
