--- a/angular/package.json
+++ b/angular/package.json
@@ -6,105 +6,64 @@
   "scripts": {
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
     "serve": "lite-server -c=bs-config.json",
     "prestart": "npm run build",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "protractor": "protractor",
-    "webdriver:update": "webdriver-manager update --standalone false --gecko false",
     "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
+    "testk": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
+    "test": "jasmine JASMINE_CONFIG_PATH=src/tests/support/jasmine.json",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
-
     "build:upgrade": "tsc",
     "serve:upgrade": "http-server",
     "build:cli": "ng build --no-progress",
     "serve:cli": "http-server dist/",
     "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
     "serve:aot": "lite-server -c bs-config.aot.json",
-    "start:webpack": "webpack-dev-server --inline --progress --port 8080",
-    "test:webpack": "karma start karma.webpack.conf.js",
-    "build:webpack": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
     "copy-dist-files": "node ./copy-dist-files.js",
-    "i18n": "ng-xi18n"
+    "i18n": "ng-xi18n",
+    "clean": "rm -r dist"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "4.1.0",
-    "@angular/compiler": "4.1.0",
-    "@angular/compiler-cli": "4.1.0",
-    "@angular/core": "4.1.0",
-    "@angular/forms": "4.1.0",
-    "@angular/http": "4.1.0",
-    "@angular/platform-browser": "4.1.0",
-    "@angular/platform-browser-dynamic": "4.1.0",
-    "@angular/platform-server": "4.1.0",
-    "@angular/router": "4.1.0",
-    "@angular/tsc-wrapped": "4.1.0",
-    "@angular/upgrade": "4.1.0",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.8.4"
+      "@angular/common": "4.3.6",
+      "@angular/compiler": "4.3.6",
+      "@angular/core": "4.3.6",
+      "@angular/forms": "4.3.6",
+      "@angular/http": "4.3.6",
+      "@angular/platform-browser": "4.3.6",
+      "@angular/platform-browser-dynamic": "4.3.6",
+      "@angular/router": "4.3.6",
+      "core-js": "^2.4.1",
+      "rxjs": "5.4.3",
+      "rx-http-request": "^1.2.0",
+      "systemjs": "0.19.39",
+      "zone.js": "^0.8.4",
+      "angular-date-value-accessor": "^0.0.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.0",
-    "@types/angular": "^1.5.16",
-    "@types/angular-animate": "^1.5.5",
-    "@types/angular-cookies": "^1.4.2",
-    "@types/angular-mocks": "^1.5.5",
-    "@types/angular-resource": "^1.5.6",
-    "@types/angular-route": "^1.3.2",
-    "@types/angular-sanitize": "^1.3.3",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.45",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.0.4",
-    "babel-cli": "^6.16.0",
-    "babel-preset-angular2": "^0.0.2",
-    "babel-preset-es2015": "^6.16.0",
-    "canonical-path": "0.0.2",
-    "concurrently": "^3.0.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.16.1",
-    "http-server": "^0.9.0",
-    "jasmine": "~2.4.1",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
-    "lite-server": "^2.2.2",
-    "lodash": "^4.16.2",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "~4.0.14",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.36.0",
-    "rollup-plugin-commonjs": "^4.1.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "source-map-explorer": "^1.3.2",
-    "style-loader": "^0.13.1",
-    "ts-node": "^1.3.0",
-    "tslint": "^3.15.1",
-    "typescript": "~2.2.1",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.4.1",
-    "webpack-merge": "^3.0.0"
+      "concurrently": "^3.0.0",
+      "file-loader": "^0.9.0",
+      "html-loader": "^0.4.3",
+      "http-server": "^0.9.0",
+      "jasmine-core": "~2.4.1",
+      "karma": "^1.3.0",
+      "karma-chrome-launcher": "^2.0.0",
+      "karma-cli": "^1.0.1",
+      "karma-jasmine": "^1.0.2",
+      "karma-jasmine-html-reporter": "^0.2.2",
+      "lite-server": "^2.3.0",
+      "lodash": "^4.16.4",
+      "protractor": "~4.0.14",
+      "rimraf": "^2.5.4",
+      "tslint": "^3.15.1",
+      "typescript": "~2.4.2",
+      "@types/node": "^6.0.46",
+      "@types/jasmine": "2.5.36",
+      "jasmine-rx": "0.1.6"
   },
   "repository": {}
 }
