--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
-include 'zeidon', 'controller', 'server'
+include 'zeidon', 'controller', 'angular', 'server'
 
 project(":zeidon").name = "utc-zeidon"
 project(":controller").name = "utc-controller"
 project(":server").name = "utc-server"
+project(":angular").name = "utc-angular"
