--- a/zeidon/build.gradle
+++ b/zeidon/build.gradle
@@ -9,6 +9,12 @@ configurations {
     generateTypescriptFiles
 }
 
+buildscript {
+    repositories{ jcenter() }
+    dependencies {
+    }
+}
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile( "com.quinsoft.zeidon:zeidon-scala:${versions.zeidon}" ) {
@@ -18,14 +24,17 @@ dependencies {
         exclude module: 'commons-validator'
     }
 
-    compile( 'org.scala-lang:scala-library:2.11.8' ) {
-	exclude module: 'scala-xml_2.11'
+    compile( 'org.scala-lang:scala-library:2.12.3' ) {
+        exclude module: 'scala-xml_2.12'
     }
     
     compile 'org.xerial:sqlite-jdbc:3.14.2'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.scalatest:scalatest_2.12:3.0.4'
+    testRuntime 'org.scala-lang.modules:scala-xml_2.12:1.0.5'
 
-    repl 'org.scala-lang:scala-compiler:2.11.8'
+    repl 'org.scala-lang:scala-compiler:2.12.3'
     repl "com.quinsoft.zeidon:object-browser:${versions.zeidon}"
     repl 'jline:jline:2.13'
 
@@ -44,7 +53,7 @@ task generateTypescriptFiles( type: JavaExec ) {
     description 'Generates Typescript files for each LOD.'
     
     def xodDir = file("src/main/resources/utc/bin")
-    def typescriptDir = file("../angular/src/app")
+    def typescriptDir = file("../angular/src/app/lod")
 
     // Set up properties so this only gets executed if an XOD has changed.
     outputs.upToDateSpec = new org.gradle.api.specs.AndSpec()
@@ -55,7 +64,7 @@ task generateTypescriptFiles( type: JavaExec ) {
     classpath( configurations.generateTypescriptFiles, sourceSets.main.runtimeClasspath, '../conf' )
     standardInput System.in
     args( 'UTC', typescriptDir )
-    jvmArgs( '-Xdebug', '-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n' )
+//    jvmArgs( '-Xdebug', '-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n' )
 }
 
 jar.dependsOn generateTypescriptFiles
