Update to Angular 5

--- a/angular/.vscode/settings.json
+++ b/angular/.vscode/settings.json
@@ -17,6 +17,6 @@
     // Following for Numbered Bookmarks extension.
     "numberedBookmarks.saveBookmarksBetweenSessions": true,
     "numberedBookmarks.useStickyBookmarks": true,
-    "window.title": "UTC: ${rootName}${separator}${activeEditorShort}"
-    
+    "window.title": "UTC: ${rootName}${separator}${activeEditorShort}",
+    "git.ignoreLimitWarning": true
 }
