--- a/angular/package.json
+++ b/angular/package.json
@@ -18,35 +18,41 @@
     "serve:aot": "lite-server -c bs-config.aot.json",
     "copy-dist-files": "node ./copy-dist-files.js",
     "i18n": "ng-xi18n",
-      "clean": "rm -r dist",
-      "test-script": "node dist/app/test-scripts.js"
+    "clean": "rm -r dist",
+    "test-script": "node dist/app/test-scripts.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "4.3.6",
-    "@angular/compiler": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/forms": "4.3.6",
-    "@angular/http": "4.3.6",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/platform-browser-dynamic": "4.3.6",
-    "@angular/router": "4.3.6",
+    "@angular/animations": "^5.0.3",
+    "@angular/common": "^5.0.3",
+    "@angular/compiler": "^5.0.3",
+    "@angular/compiler-cli": "^5.0.3",
+    "@angular/core": "^5.0.3",
+    "@angular/forms": "^5.0.3",
+    "@angular/http": "^5.0.3",
+    "@angular/platform-browser": "^5.0.3",
+    "@angular/platform-browser-dynamic": "^5.0.3",
+    "@angular/platform-server": "^5.0.3",
+    "@angular/router": "^5.0.3",
     "angular-date-value-accessor": "^0.0.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
     "rx-http-request": "^1.2.0",
-    "rxjs": "5.4.3",
+    "rxjs": "^5.5.2",
     "systemjs": "0.19.39",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.46",
     "concurrently": "^3.0.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "http-server": "^0.9.0",
     "jasmine-core": "~2.4.1",
+    "jasmine-rx": "0.1.6",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -57,10 +63,7 @@
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
     "tslint": "^3.15.1",
-    "typescript": "~2.4.2",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36",
-    "jasmine-rx": "0.1.6"
+    "typescript": "2.4.2"
   },
   "repository": {}
 }
