--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'scala'
+
 description ="""
 Scalatra server for handling UTC requests.
 
@@ -7,7 +9,7 @@ Project name: ${project.name}
 apply plugin: 'war'
 
 dependencies {
-    compile project(':utc-controller')
+    compile project(':utc-angular')
     compile( "com.quinsoft.zeidon:object-browser:${versions.zeidon}" )
     compile( "com.quinsoft.zeidon:zeidon-scalatra-rest:${versions.zeidon}" ) {
         exclude module: 'scala-xml_2.12' // To save space.
