--- a/zeidon/build.gradle
+++ b/zeidon/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     }
     
     compile 'org.xerial:sqlite-jdbc:3.14.2'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile 'junit:junit:4.12'
     testCompile 'org.scalatest:scalatest_2.12:3.0.4'
     testRuntime 'org.scala-lang.modules:scala-xml_2.12:1.0.5'
@@ -41,7 +41,7 @@ dependencies {
     repl 'jline:jline:2.13'
 
     generateTypescriptFiles "com.quinsoft.zeidon:javascript:${versions.zeidon}"
-    generateTypescriptFiles  group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    generateTypescriptFiles  group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     generateTypescriptFiles "com.quinsoft.zeidon:object-browser:${versions.zeidon}"
 }
 
