--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     }
 
     compile "com.github.wookietreiber:scala-chart_${versions.scala}:0.5.1"
+    compile 'org.eclipse.jetty.orbit:javax.servlet:3.0.0.v201112011016'
     testCompile 'junit:junit:4.12'
     testCompile 'org.scalatest:scalatest_2.12:3.0.4'
     testRuntime 'org.scala-lang.modules:scala-xml_2.12:1.0.5'
