--- a/angular/.vscode/settings.json
+++ b/angular/.vscode/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-   "typescript.tsdk": "node_modules/typescript/lib",
+    "window.zoomLevel": 0,
+    "typescript.tsdk": "node_modules/typescript/lib",
 
     "files.exclude": {
         "**/.git": true,
