--- a/angular/build.gradle
+++ b/angular/build.gradle
@@ -20,7 +20,7 @@ task build( type:Exec ) {
 }
 
 task clean( type:Exec ) {
-    commandLine 'rm', '-r', './dist'
+    commandLine 'rm', '-rf', './dist'
 }
 
 build.dependsOn(':utc-zeidon:build')
