--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "^5.0.3",
+    "@angular/cli": "^8.1.1",
     "@angular/common": "^5.0.3",
     "@angular/compiler": "^5.0.3",
     "@angular/compiler-cli": "^5.0.3",
