Updates to install scripts

--- a/installs/utc.config
+++ b/installs/utc.config
@@ -8,3 +8,8 @@
 
 # Specifies the IP address that the Bluetooth interface will use.
 BLUETOOTH_IP=192.168.1.10
+
+# The following are used to use gmail to send the IP address of the UTC to GMAIL_EMAIL_IP
+#GMAIL_EMAIL_RECIPIENT=myname@myaddress.net
+#GMAIL_ACCOUNT=mygmailaccount
+#GMAIL_PASSWORD=mygmailpassword
