Switch to BASH and fix setting hostname

--- a/installs/utc.config
+++ b/installs/utc.config
@@ -1,3 +1,6 @@
+# Set the hostname of the RPi.  If blank then nothing will be changed.
+UTC_HOSTNAME=UTC
+
 # If DEV_USER is specified, then a user will be created on the RPi with ssh/root
 # authority.  Intended for users who intend to debug/develop UTC.
 #DEV_USER=myuser
