Change hostname to lower-case

--- a/installs/utc.config
+++ b/installs/utc.config
@@ -1,5 +1,5 @@
 # Set the hostname of the RPi.  If blank then nothing will be changed.
-UTC_HOSTNAME=UTC
+UTC_HOSTNAME=utc
 
 # If DEV_USER is specified, then a user will be created on the RPi with ssh/root
 # authority.  Intended for users who intend to debug/develop UTC.
