Got gmail install working...maybe?

--- a/installs/utc.config
+++ b/installs/utc.config
@@ -14,5 +14,5 @@ BLUETOOTH_IP=192.168.1.10
 
 # The following are used to use gmail to send the IP address of the UTC to GMAIL_EMAIL_IP
 #GMAIL_EMAIL_RECIPIENT=myname@myaddress.net
-#GMAIL_ACCOUNT=mygmailaccount
+#GMAIL_ACCOUNT=mygmailaccount.gmail.com
 #GMAIL_PASSWORD=mygmailpassword
