--- a/angular/package.json
+++ b/angular/package.json
@@ -25,47 +25,47 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^8.1.2",
-    "@angular/cli": "^8.1.1",
-    "@angular/common": "^8.1.2",
-    "@angular/compiler": "^8.1.2",
-    "@angular/compiler-cli": "^8.1.2",
-    "@angular/core": "^8.1.2",
-    "@angular/forms": "^8.1.2",
-    "@angular/http": "^5.0.3",
-    "@angular/platform-browser": "^8.1.2",
-    "@angular/platform-browser-dynamic": "^8.1.2",
-    "@angular/platform-server": "^8.1.2",
-    "@angular/router": "^8.1.2",
-    "angular-date-value-accessor": "^0.0.2",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.10",
+    "@angular/animations": "^9.1.9",
+    "@angular/cli": "^9.1.7",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/platform-server": "^9.1.9",
+    "@angular/router": "^9.1.9",
+    "angular-date-value-accessor": "^1.0.2",
+    "core-js": "^3.6.5",
+    "reflect-metadata": "^0.1.13",
     "rx-http-request": "^1.2.0",
-    "rxjs": "^6.5.2",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.9.1",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs": "^6.5.5",
+    "systemjs": "6.3.2",
+    "zone.js": "^0.10.3",
+    "rxjs-compat": "^6.5.5"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "concurrently": "^3.0.0",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "http-server": "^0.9.0",
-    "jasmine-core": "~2.4.1",
+    "@types/jasmine": "3.5.10",
+    "@types/node": "^14.0.5",
+    "concurrently": "^5.2.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "http-server": "^0.12.3",
+    "jasmine-core": "~3.5.0",
     "jasmine-rx": "0.1.6",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "lite-server": "^2.3.0",
-    "lodash": "^4.16.4",
-    "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
-    "typescript": "3.4.5"
+    "karma": "^5.0.9",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "lite-server": "^2.5.4",
+    "lodash": "^4.17.15",
+    "protractor": "~7.0.0",
+    "rimraf": "^3.0.2",
+    "tslint": "^6.1.2",
+    "typescript": "3.8.3"
   },
   "repository": {}
 }
