--- a/angular/src/tsconfig.json
+++ b/angular/src/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [ "es2015", "dom" ],
+    "lib": [ "es2018", "dom" ],
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "../dist",
     "inlineSourceMap": true,
     "inlineSources": true,
     "typeRoots": [
       "../node_modules/@types/"
-    ]
-  },
+    ],
+    "downlevelIteration": true,
+},
   "compileOnSave": true,
   "exclude": [
     "node_modules/*",
