Update install to support comcast email

--- a/installs/utc.config
+++ b/installs/utc.config
@@ -12,7 +12,7 @@ UTC_HOSTNAME=utc
 # Specifies the IP address that the Bluetooth interface will use.
 BLUETOOTH_IP=192.168.1.10
 
-# The following are used to use gmail to send the IP address of the UTC to GMAIL_EMAIL_IP
-#GMAIL_EMAIL_RECIPIENT=myname@myaddress.net
-#GMAIL_ACCOUNT=mygmailaccount.gmail.com
-#GMAIL_PASSWORD=mygmailpassword
+# The following are used to send the IP address of the UTC to MAIL_EMAIL
+#MAIL_EMAIL_RECIPIENT=myname@myaddress.net
+#MAIL_ACCOUNT=mygmailaccount.gmail.com
+#MAIL_PASSWORD=mygmailpassword
